--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,31 +1,54 @@
+body {
+  background-image: linear-gradient(
+    135deg,
+    rgb(152, 120, 102) 0%,
+    rgb(54, 45, 55) 100%
+  );
+}
+
 header {
+  top: 40%;
+  right: 4%;
+}
+
+ul,
+li {
+  font-size: 0;
+}
+
+/* section {
   height: 100vh;
-  background-image: url("../images/main.jpg");
-  opacity: 0.6;
+} */
+
+.wrapper {
+  position: relative;
 }
 
-.header-text {
-  background-color: black;
-  color: white;
-  margin: 80px;
-  font-size: 3.5rem;
+.main-text {
+  width: 80vw;
+  padding: 3rem;
+  margin: 0 auto;
+  font-size: 2rem;
   text-align: center;
+  background-color: rgba(45, 45, 45, 0.6);
 }
 
-nav {
-  height: 48px;
-  border-bottom: 1px solid #808080;
+.nav-circle {
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  margin: 1rem 0;
+  border: 1px solid #eeeeee;
+  border-radius: 50%;
+  box-shadow: 0 2px 5px 0;
 }
 
-/* article {
-  width: 1200px;
-  margin: 80px auto;
-} */
-
-/* article > div {
-  max-width: 900px;
-  height: 100%;
-} */
+article {
+  width: 80vw;
+  /* height: 100vh; */
+  margin: auto;
+  padding: 5rem 0;
+}
 
 /* .title-text {
   font-size: 2rem;
