--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,11 @@ article {
   padding: 5rem 0;
 }
 
+.onepage {
+  width: 100vw;
+  height: 100vh;
+}
+
 /* .title-text {
   font-size: 2rem;
   line-height: 2;
