--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -4,72 +4,72 @@
 /*************** fontfamily style ***************/
 /************************************************/
 @font-face {
-  font-family: "NotoSansKR";
+  font-family: 'NotoSansKR';
   font-weight: 100;
   src: url(/assets/fonts/NotoSansKR/NotoSansKR-Thin.eot);
   src: url(/assets/fonts/NotoSansKR/NotoSansKR-Thin.eot?#iefix)
-      format("embedded-opentype"),
-    url(/assets/fonts/NotoSansKR/NotoSansKR-Thin-webfont.woff) format("woff"),
-    url(/assets/fonts/NotoSansKR/NotoSansKR-Thin-webfont.woff2) format("woff2");
+      format('embedded-opentype'),
+    url(/assets/fonts/NotoSansKR/NotoSansKR-Thin-webfont.woff) format('woff'),
+    url(/assets/fonts/NotoSansKR/NotoSansKR-Thin-webfont.woff2) format('woff2');
 }
 
 @font-face {
-  font-family: "NotoSansKR";
+  font-family: 'NotoSansKR';
   font-weight: 300;
   src: url(/assets/fonts/NotoSansKR/NotoSansKR-Light.eot);
   src: url(/assets/fonts/NotoSansKR/NotoSansKR-Light.eot?#iefix)
-      format("embedded-opentype"),
-    url(/assets/fonts/NotoSansKR/NotoSansKR-Light-webfont.woff) format("woff"),
-    url(/assets/fonts/NotoSansKR/NotoSansKR-Light-webfont.woff2) format("woff2");
+      format('embedded-opentype'),
+    url(/assets/fonts/NotoSansKR/NotoSansKR-Light-webfont.woff) format('woff'),
+    url(/assets/fonts/NotoSansKR/NotoSansKR-Light-webfont.woff2) format('woff2');
 }
 
 @font-face {
-  font-family: "NotoSansKR";
+  font-family: 'NotoSansKR';
   font-weight: 400;
   src: url(/assets/fonts/NotoSansKR/NotoSansKR-Regular.eot);
   src: url(/assets/fonts/NotoSansKR/NotoSansKR-Regular.eot?#iefix)
-      format("embedded-opentype"),
-    url(/assets/fonts/NotoSansKR/NotoSansKR-Regular-webfont.woff) format("woff"),
+      format('embedded-opentype'),
+    url(/assets/fonts/NotoSansKR/NotoSansKR-Regular-webfont.woff) format('woff'),
     url(/assets/fonts/NotoSansKR/NotoSansKR-Regular-webfont.woff2)
-      format("woff2");
+      format('woff2');
 }
 
 @font-face {
-  font-family: "NotoSansKR";
+  font-family: 'NotoSansKR';
   font-weight: 500;
   src: url(/assets/fonts/NotoSansKR/NotoSansKR-Medium.eot);
   src: url(/assets/fonts/NotoSansKR/NotoSansKR-Medium.eot?#iefix)
-      format("embedded-opentype"),
-    url(/assets/fonts/NotoSansKR/NotoSansKR-Medium-webfont.woff) format("woff"),
+      format('embedded-opentype'),
+    url(/assets/fonts/NotoSansKR/NotoSansKR-Medium-webfont.woff) format('woff'),
     url(/assets/fonts/NotoSansKR/NotoSansKR-Medium-webfont.woff2)
-      format("woff2");
+      format('woff2');
 }
 
 @font-face {
-  font-family: "NotoSansKR";
+  font-family: 'NotoSansKR';
   font-weight: 700;
   src: url(/assets/fonts/NotoSansKR/NotoSansKR-Bold.eot);
   src: url(/assets/fonts/NotoSansKR/NotoSansKR-Bold.eot?#iefix)
-      format("embedded-opentype"),
-    url(/assets/fonts/NotoSansKR/NotoSansKR-Bold-webfont.woff) format("woff"),
-    url(/assets/fonts/NotoSansKR/NotoSansKR-Bold-webfont.woff2) format("woff2");
+      format('embedded-opentype'),
+    url(/assets/fonts/NotoSansKR/NotoSansKR-Bold-webfont.woff) format('woff'),
+    url(/assets/fonts/NotoSansKR/NotoSansKR-Bold-webfont.woff2) format('woff2');
 }
 
 @font-face {
-  font-family: "NotoSansKR";
+  font-family: 'NotoSansKR';
   font-weight: 900;
   src: url(/assets/fonts/NotoSansKR/NotoSansKR-Black.eot);
   src: url(/assets/fonts/NotoSansKR/NotoSansKR-Black.eot?#iefix)
-      format("embedded-opentype"),
-    url(/assets/fonts/NotoSansKR/NotoSansKR-Black-webfont.woff) format("woff"),
-    url(/assets/fonts/NotoSansKR/NotoSansKR-Black-webfont.woff2) format("woff2");
+      format('embedded-opentype'),
+    url(/assets/fonts/NotoSansKR/NotoSansKR-Black-webfont.woff) format('woff'),
+    url(/assets/fonts/NotoSansKR/NotoSansKR-Black-webfont.woff2) format('woff2');
 }
 
 /**************************************************/
 /*************** boiler plate style ***************/
 /**************************************************/
 * {
-  font-family: "NotoSansKR";
+  font-family: 'NotoSansKR';
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
 }
@@ -101,16 +101,16 @@ a {
 }
 
 button,
-html [type="button"],
-[type="reset"],
-[type="submit"] {
+html [type='button'],
+[type='reset'],
+[type='submit'] {
   -webkit-appearance: button;
 }
 
 button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -123,8 +123,8 @@ textarea {
   overflow: auto;
 }
 
-[type="checkbox"],
-[type="radio"] {
+[type='checkbox'],
+[type='radio'] {
   box-sizing: border-box;
   padding: 0;
 }
@@ -252,7 +252,6 @@ select:focus {
   position: absolute;
 }
 
-/* fixed 추가 */
 .fixed {
   position: fixed;
 }
@@ -438,13 +437,13 @@ select:focus {
   float: right !important;
 }
 
-[class*="col-"] {
+[class*='col-'] {
   float: left;
 }
 
 /* row:after 을 clear:after로 변경 */
 .clear::after {
-  content: "";
+  content: '';
   clear: both;
   display: block;
 }
@@ -1566,7 +1565,7 @@ h6,
 /********************************************/
 /*************** button style ***************/
 /********************************************/
-[class*="btn-"] {
+[class*='btn-'] {
   font-size: 1rem;
   padding: 0;
   text-align: center;
@@ -1694,7 +1693,7 @@ i.settings {
   bottom: 0;
   margin: auto;
   left: -27px;
-  background-image: url("./icons/circle-check.svg");
+  background-image: url('./icons/circle-check.svg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -1708,7 +1707,7 @@ i.settings {
   bottom: 0;
   margin: auto;
   left: -27px;
-  background-image: url("./icons/circle-primary.svg");
+  background-image: url('./icons/circle-primary.svg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -1722,7 +1721,7 @@ i.settings {
   bottom: 0;
   margin: auto;
   left: -27px;
-  background-image: url("./icons/circle-grey.svg");
+  background-image: url('./icons/circle-grey.svg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -1760,7 +1759,7 @@ i.settings {
   position: absolute;
   top: 6px;
   right: -18px;
-  background-image: url("./icons/palletrule-on.svg");
+  background-image: url('./icons/palletrule-on.svg');
   width: 6px;
   height: 10px;
 }
@@ -1769,7 +1768,7 @@ i.settings {
   position: absolute;
   top: 8px;
   right: -18px;
-  background-image: url("./icons/palletrule-off.svg");
+  background-image: url('./icons/palletrule-off.svg');
   width: 10px;
   height: 6px;
 }
@@ -1778,7 +1777,7 @@ i.settings {
   display: inline-block;
   width: 12px;
   height: 12px;
-  background-image: url("./icons/edit.svg");
+  background-image: url('./icons/edit.svg');
   background-repeat: no-repeat;
   background-size: contain;
   margin-left: 0.25rem;
@@ -1791,7 +1790,7 @@ i.settings {
   left: 95px;
   width: 6px;
   height: 9px;
-  background-image: url("./icons/comma.svg");
+  background-image: url('./icons/comma.svg');
   background-repeat: no-repeat;
 }
 
@@ -1802,7 +1801,7 @@ i.settings {
   left: 172px;
   width: 12px;
   height: 13px;
-  background-image: url("./icons/copy.svg");
+  background-image: url('./icons/copy.svg');
 }
 
 .icon-size {
@@ -1828,13 +1827,13 @@ i.settings {
 }
 
 .date-icon::after {
-  content: "";
+  content: '';
   display: inline-block;
   position: absolute;
   left: 101px;
   width: 12px;
   height: 13.3px;
-  background-image: url("./icons/datepicker.svg");
+  background-image: url('./icons/datepicker.svg');
 }
 
 .i-pdf {
@@ -1842,13 +1841,13 @@ i.settings {
   width: 23px;
   height: 26px;
   margin-top: 17px;
-  background-image: url("./icons/pdf.svg");
+  background-image: url('./icons/pdf.svg');
 }
 
 .i-delete {
   display: inline-block;
   width: 20px;
   height: 20px;
-  background-image: url("./icons/remove.svg");
+  background-image: url('./icons/remove.svg');
   vertical-align: text-top;
 }
